<resources>
    <string name="app_name">Rob Manager</string>
    <string name="menu">Menu</string>

    <string name="task_title">Task Manager</string>
    <string name="task_desc">create and manage tasks</string>

    <string name="budget_title">Budget Manager</string>
    <string name="budget_desc">create and manage budgets</string>

    <string name="transaction_title">Transaction Manager</string>
    <string name="transaction_desc">create and manage transaction</string>

    <string name="task_menu">Tasks</string>
    <string name="add_task">Add Task</string>
    <string name="view_task">View Task</string>


    <string name="name">Name</string>
    <string name="value">Value</string>

    <string name="search">Search</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="calender">Calender</string>
    <string name="add">Add</string>
    <string name="startIntro">Start Intro</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="delete">Delete</string>
    <string name="profile">Profile</string>
    <string name="selectDate">Select Date</string>


    <!--    //Transactions-->
    <string name="expenses">Expenses</string>
    <string name="addexpenses">Add Expenses</string>
    <string name="Ex_name">Name</string>
    <string name="Ex_description">Description</string>
    <string name="Ex_amount">Amount</string>
    <string name="EditTask">Edit Task</string>
    <string name="edit_expenses">Edit Expenses</string>


    <!--    //User function-->
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="date">Date</string>
    <string name="selectTime">Select Time</string>
    <string name="time">Time</string>


    <!--    //Budget -->

    <!--    //Budgets-->
    <string name="bAmount">Amount</string>
    <string name="Budget">Budget</string>
    <string name="BudgetName">Name</string>
    <string name="BudgetAmount">Amount</string>

    <string name="RobManager">Rob Manager</string>
    <string name="skip">Skip</string>
    <string name="Continue">Continue</string>
    <string name="budgetmanager">Budget Manager</string>
    <string name="transactionmanager">Transaction Manager</string>
    <string name="intro1">Hey there! I support users to insert, update and delete daily tasks</string>
    <string name="intro2">Hey there! I support users to insert, update and delete daily budgets</string>
    <string name="intro3">Hey there! I support users to insert, update and delete daily transactions</string>
    <string name="Intro">This mobile application enables a user to enter their daily tasks, budgets and transactions.Users can manage their tasks, budgets and transactions.</string>
    <string name="username">User Name</string>
</resources>
