<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditExActivity">


    <TextView
        android:id="@+id/Ex_viewName"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="44dp"
        android:text="@string/name"
        android:textColor="#FD030303"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Ex_Value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/value"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/Ex_viewName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Ex_viewName" />

    <TextView
        android:id="@+id/Ex_viewAmount"
        android:layout_width="97dp"
        android:layout_height="33dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="116dp"
        android:text="@string/Ex_amount"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Ex_AmValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/value"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/Ex_viewDesc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.308"
        app:layout_constraintStart_toEndOf="@+id/Ex_viewDesc" />

    <TextView
        android:id="@+id/Ex_viewDesc"
        android:layout_width="136dp"
        android:layout_height="37dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="188dp"
        android:text="@string/Ex_description"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Ex_DeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/value"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/Ex_viewAmount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toEndOf="@+id/Ex_viewAmount" />


</androidx.constraintlayout.widget.ConstraintLayout>