<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".ExpenseEditingActivity">

    <TextView
        android:id="@+id/editex_name"
        android:layout_width="77dp"
        android:layout_height="46dp"
        android:layout_marginStart="61dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="33dp"
        android:layout_marginBottom="64dp"
        android:text="@string/Ex_name"
        android:textColor="#0A0A0A"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/editex_description"
        app:layout_constraintEnd_toStartOf="@+id/editEx_namefill"
        app:layout_constraintHorizontal_bias="0.88"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.216"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/editex_description"
        android:layout_width="165dp"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="225dp"
        android:layout_marginBottom="47dp"
        android:text="@string/Ex_description"
        android:textColor="#131212"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/editEx_discfill"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.263"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editEx_amountfill"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/editex_date"
        android:layout_width="102dp"
        android:layout_height="41dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="52dp"
        android:text="@string/Ex_amount"
        android:textColor="#050505"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/editex_description"
        app:layout_constraintEnd_toStartOf="@+id/editEx_amountfill"
        app:layout_constraintHorizontal_bias="0.295"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editex_name"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editEx_namefill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:layout_marginEnd="56dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/Ex_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/editEx_amountfill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="336dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/Ex_amount"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editEx_namefill"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/editEx_discfill"
        android:layout_width="328dp"
        android:layout_height="129dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="248dp"
        android:layout_marginEnd="57dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/Ex_description"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.932"
        app:layout_constraintStart_toEndOf="@+id/editex_description"
        app:layout_constraintTop_toBottomOf="@+id/editEx_namefill"
        tools:ignore="MissingConstraints"
        tools:targetApi="o" />

</androidx.constraintlayout.widget.ConstraintLayout>